// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectableList Rendering renders itself correctly 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#DBE0E3",
          "height": 1,
          "width": "100%",
        },
      ]
    }
    testID="divider"
  />,
  <RCTScrollView
    ItemSeparatorComponent={[Function]}
    data={
      Array [
        Object {
          "id": "app-list-item-1",
          "label": "List Item 1",
          "onPress": [MockFunction],
        },
        Object {
          "id": "app-list-item-2",
          "label": "List Item 2",
          "onPress": [MockFunction],
        },
        Object {
          "id": "app-list-item-3",
          "label": "List Item 3",
          "onPress": [MockFunction],
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {},
      ]
    }
    testID="list"
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00AEFF",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "opacity": 1,
              "paddingBottom": 12.5,
              "paddingHorizontal": 22,
              "paddingTop": 13.75,
            }
          }
          testID="item"
        >
          <Text
            inversed={true}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "500",
                  "textAlign": "left",
                },
              ]
            }
            testID="item-label"
          >
            List Item 1
          </Text>
          <Image
            source={
              Object {
                "testUri": "../../../source/images/success-white.png",
              }
            }
            style={
              Array [
                Object {
                  "height": 12,
                  "width": 12,
                },
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#DBE0E3",
                "height": 1,
                "width": "100%",
              },
            ]
          }
          testID="divider"
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "opacity": 1,
              "paddingBottom": 12.5,
              "paddingHorizontal": 22,
              "paddingTop": 13.75,
            }
          }
          testID="item"
        >
          <Text
            inversed={false}
            style={
              Array [
                Object {
                  "color": "#1C2530",
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "500",
                  "textAlign": "left",
                },
              ]
            }
            testID="item-label"
          >
            List Item 2
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#DBE0E3",
                "height": 1,
                "width": "100%",
              },
            ]
          }
          testID="divider"
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "opacity": 1,
              "paddingBottom": 12.5,
              "paddingHorizontal": 22,
              "paddingTop": 13.75,
            }
          }
          testID="item"
        >
          <Text
            inversed={false}
            style={
              Array [
                Object {
                  "color": "#1C2530",
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "500",
                  "textAlign": "left",
                },
              ]
            }
            testID="item-label"
          >
            List Item 3
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>,
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#DBE0E3",
          "height": 1,
          "width": "100%",
        },
      ]
    }
    testID="divider"
  />,
]
`;

exports[`SelectableListItem Rendering renders itself correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "opacity": 1,
      "paddingBottom": 12.5,
      "paddingHorizontal": 22,
      "paddingTop": 13.75,
    }
  }
  testID="item"
>
  <Text
    inversed={false}
    style={
      Array [
        Object {
          "color": "#1C2530",
          "fontFamily": "System",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "500",
          "textAlign": "left",
        },
      ]
    }
    testID="item-label"
  >
    List Item 1
  </Text>
</View>
`;

exports[`SelectableListItem Rendering renders tick icon when selected 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#00AEFF",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "opacity": 1,
      "paddingBottom": 12.5,
      "paddingHorizontal": 22,
      "paddingTop": 13.75,
    }
  }
  testID="item"
>
  <Text
    inversed={true}
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "System",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "500",
          "textAlign": "left",
        },
      ]
    }
    testID="item-label"
  >
    List Item 1
  </Text>
  <Image
    source={
      Object {
        "testUri": "../../../source/images/success-white.png",
      }
    }
    style={
      Array [
        Object {
          "height": 12,
          "width": 12,
        },
      ]
    }
  />
</View>
`;
